@@ -164,6 +164,7 @@ sub add_defaults {
         'unsharp threshold' => 0.05,
         'cache options'     => TRUE,
         'restore window'    => TRUE,
+        'set_timestamp'     => TRUE,
         'date offset'       => 0,
         'pdf compression'   => 'auto',
         'quality'           => 75,
