@@ -1,10 +1,13 @@
 use warnings;
 use strict;
-use Test::More tests => 1;
+use Date::Calc qw(Date_to_Time);
+use File::stat;
+use Glib qw(TRUE FALSE);    # To get TRUE and FALSE
+use Test::More tests => 3;
 
 BEGIN {
     use Gscan2pdf::Document;
-    use Gtk2 -init;    # Could just call init separately
+    use Gtk2 -init;         # Could just call init separately
 }
 
 #########################
@@ -15,6 +18,8 @@ my $logger = Log::Log4perl::get_logger;
 Gscan2pdf::Document->setup($logger);
 
 # Create test image
+my $pnm  = 'test.pnm';
+my $djvu = 'test.djvu';
 system('convert rose: test.pnm');
 
 my $slist = Gscan2pdf::Document->new;
@@ -23,27 +28,28 @@ my $slist = Gscan2pdf::Document->new;
 my $dir = File::Temp->newdir;
 $slist->set_dir($dir);
 
-my $metadata = { Title => 'metadata title' };
+my %metadata = ( date => [ 2016, 2, 10 ], title => 'metadata title' );
 $slist->import_files(
-    paths             => ['test.pnm'],
+    paths             => [$pnm],
     finished_callback => sub {
         $slist->save_djvu(
-            path              => 'test.djvu',
+            path              => $djvu,
             list_of_pages     => [ $slist->{data}[0][2] ],
-            metadata          => $metadata,
+            metadata          => \%metadata,
+            set_timestamp     => TRUE,
             finished_callback => sub { Gtk2->main_quit }
         );
     }
 );
 Gtk2->main;
 
-like(
-    `djvused test.djvu -e 'print-meta'`,
-    qr/metadata title/,
-    'metadata in DjVu'
-);
+my $info = `djvused $djvu -e 'print-meta'`;
+like( $info, qr/metadata title/, 'metadata in DjVu' );
+like( $info, qr/2016-02-10/,     'metadata ModDate in DjVu' );
+my $sb = stat($djvu);
+is( $sb->mtime, Date_to_Time( 2016, 2, 10, 0, 0, 0 ), 'timestamp' );
 
 #########################
 
-unlink 'test.pnm', 'test.djvu';
+unlink $pnm, $djvu;
 Gscan2pdf::Document->quit();
